--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>To reset the game press R</p>
           <p>
             Follow me
-            <a href="https://twitter.com/HunorBorbely" , target="_top">@HunorBorbely</a>
+            <a href="https://www.instagram.com/mhabibr02/" , target="_top">@mhabibr02</a>
           </p>
         </div>
       </div>
